--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -15,7 +15,8 @@
             android:layout_width="wrap_content"
             android:textAllCaps="true"
             android:padding="10dp"
-            android:text="text"
+            android:gravity="center"
+            android:text="12"
             android:textColor="@color/white"
             android:layout_height="wrap_content"/>
 
