--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -6,6 +6,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:background="@drawable/gray_corner_stroke"
         tools:context=".MainActivity">
 
@@ -15,9 +17,12 @@
             android:layout_width="wrap_content"
             android:textAllCaps="true"
             android:padding="10dp"
+            android:layout_gravity="center"
             android:gravity="center"
             android:text="12"
-            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="#000000"
             android:layout_height="wrap_content"/>
 
 
